Fix theme selector spacing a bit

--- a/src/client/styles/components/_theme-selector.scss
+++ b/src/client/styles/components/_theme-selector.scss
@@ -3,6 +3,7 @@
 
 .theme-selector {
   flex-direction: row;
+  margin: 0 -2px;
 }
 
 .theme-selector__item {
